# Hard_Life

./: CMakeLists.txt  README.md
include/: Sistema.hpp  raylib.h  sistema.hpp
include/dominios/acoes/: Movimento.hpp  Texto.hpp
include/dominios/objetos/: Cenario.hpp  Personagem.hpp  PlanoDeFundo.hpp
include/utils/: utilitarios.hpp
src/: Sistema.cpp  main.cpp  sistema.cpp
src/dominios/acoes/: Movimento.cpp  Texto.cpp
src/dominios/objetos/: Cenario.cpp  Personagem.cpp  PlanoDeFundo.cpp
src/utils/: utilitarios.cpp
